# vimjay

./: CMakeLists.txt  Cargo.toml  README.md  camthing.cpp  camthing.h  cluster.cpp  cluster.h  config.cpp  config.h  config.yml  default_graph.yml  filter.cpp  filter.h  generate.cpp  generate.h  graph.yml  input.cpp  input.h  misc_nodes.cpp  misc_nodes.h  modify.cpp  modify.h  nodes.cpp  nodes.h  opengl.cpp  opengl.h  output.cpp  output.h  package.xml  screencap.cpp  screencap.h  setup.py  signals.cpp  signals.h  structure.cpp  structure.h  temp_graph.yml  utility.cpp  utility.h  video.cpp  (+1 more)
.github/workflows/: main.yml  ubuntu_18_04.yml  ubuntu_20_04.yml
cfg/: BackgroundSubtraction.cfg  CameraInfo.cfg  DrCameraInfo.cfg  ImageDeque.cfg
config/: background_subtraction.perspective  camera.yaml  camera_info_to_plane.perspective  camera_info_to_plane.rviz  distort.perspective  dr.perspective  graph.yml  image_rect.perspective  stop_motion.perspective  stop_motion_dr.yaml  stopmo_noetic.perspective  temp_graph.yml  webcam.perspective
data/ui/: triangle_tessellation.xcf
include/: camthing.h  cluster.h  config.h  filter.h  generate.h  image_dir.h  input.h  misc_nodes.h  modify.h  nodes.h  opengl.h  output.h  screencap.h  signals.h  structure.h  utility.h  video.h
include/dso_noises/: cellular.h  noise1234.h  sdnoise1234.h  shadeop.h  simplexnoise1234.h
include/other/DSOnoises/: cellular.h  noise1234.h  sdnoise1234.h  shadeop.h  simplexnoise1234.h  srdnoise23.h
include/simplex/: simplexnoise.h  simplextextures.h
include/vimjay/: camthing.h  cluster.h  config.h  cv_distort_image.h  filter.h  generate.h  image_dir.h  input.h  misc_nodes.h  modify.h  nodes.h  opengl.h  output.h  screencap.h  signals.h  structure.h  utility.h  video.h
launch/: background_subtraction.launch  camera_info_to_plane.launch  dev0_stop_motion.launch  distort.launch  image_rect.launch  restart_cam.launch  stop_motion.launch  vimjay.launch  webcam.launch
other/: simplexnoise.cpp  simplexnoise.h  simplextextures.cpp  simplextextures.h
other/DSOnoises/: DSOcellularnoise.c  DSOimprovednoise.c  DSOsimplexnoise.c  DSOsrdnoise.c  cellular.c  noise1234.c  noise1234.h  sdnoise1234.c  sdnoise1234.h  simplexnoise1234.c  srdnoise23.c
other/dso_noises/: DSOimprovednoise.c  DSOsimplexnoise.c  DSOsrdnoise.c  cellular.c  noise1234.c  sdnoise1234.c  simplexnoise1234.c  srdnoise23.c
scripts/: camera_info_to_plane.py  display.py  dr_camera_info.py  grep_msgs.sh  image.py  key_input.py  subdiv.py  test_key.py  webcam.html
src/: camthing.cpp  cluster.cpp  config.cpp  filter.cpp  generate.cpp  image_dir.cpp  input.cpp  lib.rs  misc_nodes.cpp  modify.cpp  nodes.cpp  opengl.cpp  output.cpp  screencap.cpp  signals.cpp  structure.cpp  utility.cpp  video.cpp  vimjay.cpp
src/nngen/: gennn.cpp  nn_im.cpp  nn_im.hpp  nngen.cpp
src/standalone/: background_subtraction.cpp  cam_sub.cpp  camera_info_to_plane.cpp  color.cpp  cv_distort_image.cpp  distort_image.cpp  iir_image.cpp  image_deque.cpp  key_trigger.cpp  noise.cpp  save_image.cpp
src/vimjay/: __init__.py  camera_info_util.py
test/: cv_image_distort_test.cpp  image_distort_test.cpp  image_distort_test.xml
