<?xml version="1.0"?>
<package>
  <name>vimjay</name>
  <version>0.0.1</version>
  <description>Manipulate video live in a graph, also some ros nodes for video processing</description>

  <maintainer email="lucasw@todo.todo">lucasw</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/lucasw/vimjay</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <run_depend>camera_info_manager</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>dynamic_reconfigure_tools</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>libuvc_camera</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_image_view</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_interactive_tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>v4l2ucp</run_depend>

</package>
